Passes all 16 tests.  And correctly reacts in the chrome browser.
Class exercise, based on TDD (test driven development), to calculate the weight of any Earth object on any of the listed solar system bodies.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
   </head>
   <body>
      <!-- Write your markup here  -->
+   
+     <input id="user-weight" type="text" placeholder="Weight (lbs)" />
+     <select id="planets">
+       <option value=planet>--Please choose your planet</option>
+     </select>
+     <p id="output"></p>
+     <!--<button onclick="handleClickEvent()")type="button" -->
+       <button id="calculate-button">Calculate</button>
 
-    <script src="main.js" charset="utf-8"></script>
+     <div id="div1">
+
+     </div>
+
+    
+<script src="main.js" charset="utf-8"></script>
+  <!--    -->
   </body>
 </html>
